<resources>
    <string name="app_name">AmoreCaffeApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MenuFragment">Menú</string>
    <string name="CarritoFragment">Carrito</string>
    <string name="MiCuentaFragment">Mi Cuenta</string>
    <string name="valetcorreo">Ingresar su correo</string>
    <string name="valtitulo">Iniciar Sesion</string>
    <string name="valpassusuario">Ingrese su contraseña</string>
    <string name="valbtnlogin">Ingresar</string>
    <string name="valbtnDetalles">Detalles</string>
    <string name="valbtnAnadir">Añadir</string>
    <string name="valtvNombre">Nombre</string>
    <string name="valtvApellido">Apellidos</string>
    <string name="valtvCorreo">Correo electrónico</string>
    <string name="valtvContra">Contraseña</string>
    <string name="valtvContraCom">Confirmar contraseña</string>
    <string name="x">REGISTRAR</string>
    <string name="valbtnRegistrarse">REGISTRARSE</string>
    <string name="valtvTitulo">REGISTRARME</string>
    <string name="txtRegisterTelf">Ingresar su Telefono</string>
    <string name="Telef">Telefono</string>
    <string name="valbtnCerrar">Cerrar Sesión</string>
    <string name="valbtnEditar">Editar Perfil</string>
    <string name="valbtnActualizar">Actualizar Perfil</string>
    <string name="valtxtNombre">Ingrese su nombre</string>
    <string name="valtxtApellidos">Ingrese sus apellidos</string>
    <string name="txtvalTelefono">Ingrese su teléfono</string>
</resources>