<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/menuFragment">
    <fragment
        android:id="@+id/menuFragment"
        android:name="ec2_group9.idat.amorecaffeapp.view.fragments.MenuFragment"
        android:label="@string/MenuFragment"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/carritoFragment"
        android:name="ec2_group9.idat.amorecaffeapp.view.fragments.CarritoFragment"
        android:label="@string/CarritoFragment"
        tools:layout="@layout/fragment_carrito" />
    <fragment
        android:id="@+id/miCuentaFragment"
        android:name="ec2_group9.idat.amorecaffeapp.view.fragments.MiCuentaFragment"
        android:label="@string/MiCuentaFragment"
        tools:layout="@layout/fragment_mi_cuenta" />
</navigation>